cluster/apps/media/apps/jellyfin/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: jellyfin
          namespace: media
          port: 8096
      # No authentik middleware for jellyfin, it has its own auth system
  tls: {}
