cluster/apps/media/apps/jellyfin/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jellyfin
  namespace: media
spec:
  hosts:
  - jellyfin.${domain_name}
  gateways:
  - istio-ingress/istio-ingressgateway
  http:
  - route:
    - destination:
        host: jellyfin.media.svc.cluster.local
        port:
          number: 8096
    match:
    - authority:
        exact: jellyfin.${domain_name}
      uri:
        prefix: /
